# Gradient-editing

./: CMakeLists.txt  README.md  README.txt  proposal.txt
data/input/: ante2-out.hdr
presentation/: Presentation.pptx  ~$Presentation.pptx
src/: a2.cpp  a2.h  a6.cpp  a6.h  exceptions.h  filtering.cpp  filtering.h  floatimage.cpp  floatimage.h  laplacianBlend.cpp  laplacianBlend.h  main.cpp  poisson.cpp  poisson.h
